--- a/styles/general.css
+++ b/styles/general.css
@@ -1,9 +1,6 @@
 /* Miscellaneous styles */
 * {
   font-family: 'Inter', sans-serif;
-}
-
-body {
   margin: 0;
   padding: 0;
 }
@@ -61,4 +58,35 @@ body {
 
 .hidden {
   display: none;
+}
+
+
+/* Back to top button */
+.back-to-top-btn {
+  position: fixed;
+  bottom: 1.5rem;
+  right: 1.5rem;
+  width: 3rem;
+  height: 3rem;
+  background-color: #3b82f6;
+  color: white;
+  border: none;
+  border-radius: 9999px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  visibility: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.back-to-top-btn i {
+  width: 1.25rem;
+  height: 1.25rem;
+  font-size: 1.3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
