--- a/styles/footer.css
+++ b/styles/footer.css
@@ -22,7 +22,7 @@
 }
 
 .footer-logo {
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   font-size: 1.5rem;
   color: white;
   text-decoration: none;
