--- a/styles/header.css
+++ b/styles/header.css
@@ -19,7 +19,7 @@
 
 .site-title {
   font-size: 1.5rem;
-  font-family: 'Pacifico', cursive;
+  font-family: "Pacifico", cursive;
   color: #1f2937;
   text-decoration: none;
 }
