--- a/styles/general.css
+++ b/styles/general.css
@@ -3,10 +3,13 @@
   font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
+html,
 body {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Button styles */
